--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
 			<h2 class="text-center">Scolarité</h2>
 			<div class="timeline">
 				<div class="first-event">
-					<div class="date">In progress</div>
+					<div class="date">En cours</div>
 					<div class="content"  >
 						<h3>École d'ingénieurs</h3>
 						<p>CESI École d'ingénieurs, Vandœuvre-lès-Nancy, France</p>
@@ -419,7 +419,7 @@
 					</div>
 				</div>
 				<div class="event">
-					<div class="date">June 2020</div>
+					<div class="date">Juin 2020</div>
 					<div class="content">
 						<h3>Baccalauréat général</h3>
 						<p>Lycée Henri Poincaré, Nancy, France</p>
@@ -427,7 +427,7 @@
 					</div>
 				</div>
 				<div class="event">
-					<div class="date">June 2017</div>
+					<div class="date">Juin 2017</div>
 					<div class="content">
 						<h3>Brevet des collèges</h3>
 						<p>Collège, Louis Marin, Custines, France</p>
